--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h1>Login Form</h1>
+  
+  <form id="loginForm">
+    <label for="username">Username:</label>
+    <input type="text" id="username" placeholder="Username">
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" placeholder="Password">
+
+    <input type="checkbox" id="checkbox">
+    <label for="checkbox">Remember me</label>
+
+    <input type="submit" id="submit" value="Submit">
+  </form>
+
+  <button id="existing">Login as existing user</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
